# TPZadaci

./: 03  CMakeLists.txt  MaxFromTwoNumbers  README.md  main  test  zad1  zad2  zad3  zsr1  zsr1.cpp
IspitVjezba/: zad1.cpp  zad2.cpp  zad3.cpp
Podsjetnik za matrice/: main.cpp
TestZad/: MaxFromTwoNumbers.cpp  arrTest.cpp  test.cpp
UDEMY-COURSE/Challenges/Looping and More - Challenge 4/: main.cpp
UDEMY-COURSE/Challenges/Substitution Cypher - Challenge 5/: main.cpp
UDEMY-COURSE/Challenges/Variables - Challenge 1/: main.cpp
UDEMY-COURSE/Challenges/Vectors - Challenge 2/: main.cpp
ZSR/ZSR1/1 - Oduzimanje sati, minute, sekunde/: main.cpp
ZSR/ZSR1/10 - Rastava broja na proste faktore bez ponavljanja/: main.cpp
ZSR/ZSR1/2 - Brzina broda/: main.cpp
ZSR/ZSR1/3 - Testiranje brojeva, prirodni, realni, cijeli/: main.cpp
ZSR/ZSR1/4 - Izracunavanje racuna, preporuka firme korisniku/: main.cpp
ZSR/ZSR1/5 - Kvadratna jednacina sa uslovima/: main.cpp
ZSR/ZSR1/6 - Katete trougla/: main.cpp  pokusaj.cpp
ZSR/ZSR1/7 - Iznos glavnice, formatiranje teksta/: main.cpp
ZSR/ZSR1/8 - Brojevi, pozitivni i neparni bez koristenja nizova/: main.cpp
ZSR/ZSR1/9 - Rastava broja na proste faktore/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/02/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/03/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/13/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/14/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/20/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/21/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/29/: main.cpp
ZSR/ZSR2(webackmotherfuckers)/33/: main.cpp
ZSR/ZSR2/01 - Simetricnost broja/: main.cpp
ZSR/ZSR2/02 - Da li broj ima jednake cifre/: main.cpp
ZSR/ZSR2/03 - Da li broj ima barem dvije jednake cifre uzastopno/: main.cpp
ZSR/ZSR2/04 - Podbroj, ispisivanje broja po parnosti/: main.cpp
ZSR/ZSR2/09 - Func. prima vektor, ima li vektor parnih/: main.cpp
ZSR/ZSR2/11 - Da li postoji poptunih kvadrata u vektoru/: main.cpp
ZSR/ZSR2/11 - Funkcija realni vektor, granica vektora, obrnuti redoslijed ispisa/: main.cpp
ZSR/ZSR2/12 - Ima li u vektoru trocifrenih brojeva/: main.cpp
ZSR/ZSR2/13 - Ima li brojeva koji su stepeni broja 2/: main.cpp
ZSR/ZSR2/14 - Vektor ciji su elementi djelioci/: main.cpp
ZSR/ZSR2/15 - Vracanje vektora ciji su elementi svi stepeni broja 2/: main.cpp
ZSR/ZSR2/16 - Vracanje vektora ciji su elementi potpuni kvadrati/: main.cpp
ZSR/ZSR2/17 - Vracanje vektora, trocifreni brojevi djeljiviji sa unesenim parametrom/: main.cpp
ZSR/ZSR2/18 - Vektor vraca prvo parne pa neparne elemente/: main.cpp
ZSR/ZSR2/19  - Vektor koji vraca broj cifara elemenata/: main.cpp
ZSR/ZSR2/20 - Sabiraj cifre vektora i vrati kao novi vektor/: main.cpp
ZSR/ZSR2/23 - Lokalni maksimumi u vektoru/: main.cpp
ZSR/ZSR2/24 - Osciliranja elemenata u vektoru/: main.cpp
ZSR/ZSR3/02/: main.cpp
ZSR2(webackmotherfuckers)/01/: main.cpp
ZSR2(webackmotherfuckers)/05 - Podsjetnik za imaginarne brojeve/: main.cpp
ZSR2(webackmotherfuckers)/08/: main.cpp
ZSR2(webackmotherfuckers)/09/: main.cpp
ZSR2(webackmotherfuckers)/10/: main.cpp
ZSR2(webackmotherfuckers)/11/: main.cpp
ZSR2(webackmotherfuckers)/18/: main.cpp
ZSR2(webackmotherfuckers)/19/: main.cpp
ZSR2(webackmotherfuckers)/22/: main.cpp
(+42 files in other folders)
